--- a/index.html
+++ b/index.html
@@ -15,58 +15,84 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css" />
   
 
-</head>
+    <script defer  src="https://unpkg.com/aos@2.3.1/dist/aos.js" ></script>
+    <script defer src='./script.js'></script>
+    <script defer src='./navbar.js'></script>
+    </head>
 <body class="text-gray-800 antialiased">
 
   <!-- Navigation -->
   <nav class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg">
-      <div class="container px-4 mx-auto flex flex-wrap items-center justify-between">
-        <!-- Nav Left Side -->
-          <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
-              <a class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap uppercase text-white" href="https://github.com/bolattt">
-                <!-- Nav Title -->
-               BO LATT
+    <div class="container px-4 mx-auto flex flex-wrap items-center justify-between">
+      <!-- Nav Left Side -->
+        <div class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start">
+            <a class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap uppercase text-white" href="https://github.com/bolattt">
+              <!-- Nav Title -->
+              BO LATT
+            </a>
+            <!-- Hamburger Menu (Mobile) -->
+            <button class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none" type="button" onclick="toggleNavbar('example-collapse-navbar')">
+              <!-- Icon -->
+              <i class="text-white fas fa-bars"></i>
+            </button>
+        </div>
+        <!-- Nav Flex Row -->
+        <div class="lg:flex flex-grow items-center bg-white lg:bg-transparent lg:shadow-none hidden" id="example-collapse-navbar">
+          <!-- <ul class="flex flex-col lg:flex-row list-none mr-auto">
+            <li class="flex items-center">
+              <a class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold" 
+              href="https://www.creative-tim.com/learning-lab/tailwindcss-starter-project#/landing">
+              Icon
+              <i class="lg:text-gray-300 text-gray-500 far fa-file-alt text-lg leading-lg mr-2"></i>
+              Docs
               </a>
-              <!-- Hamburger Menu (Mobile) -->
-              <button class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none" type="button" onclick="toggleNavbar('example-collapse-navbar')">
-                <!-- Icon -->
-                <i class="text-white fas fa-bars"></i>
-              </button>
-          </div>
-        <!-- Nav Right Side -->
-        <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
-          <!-- Social Media Button -->
-          <li class="flex items-center">
-            <a class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-              href="#pablo">
-              <!-- Icon -->
-              <i class="lg:text-gray-300 text-gray-500 fab fa-facebook text-lg leading-lg "></i>
-              <span class="lg:hidden inline-block ml-2">Share</span>
-            </a>
-          </li>
-          <!-- Social Media Button -->
-          <li class="flex items-center">
-            <a class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-              href="#pablo">
-              <!-- Icon -->
-              <i class="lg:text-gray-300 text-gray-500 fab fa-instagram text-lg leading-lg "></i>
-              <span class="lg:hidden inline-block ml-2">Tweet</span>
-            </a>
-          </li>
-          <!-- Social Media Button -->
-          <li class="flex items-center">
-            <a class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-              href="#pablo">
-              <!-- Icon -->
-              <i class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg "></i>
-              <span class="lg:hidden inline-block ml-2">Star</span>
-            </a>
-          </li>
-        </ul>
-      </div>
+            </li>
+          </ul> -->
+      <!-- Nav Right Side -->
+      <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
+        <!-- Social Media Button -->
+        <li class="flex items-center">
+          <a class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+            href="#pablo">
+            <!-- Icon -->
+            <i class="lg:text-gray-300 text-gray-500 fab fa-facebook text-lg leading-lg "></i>
+            <span class="lg:hidden inline-block ml-2">Share</span>
+          </a>
+        </li>
+        <!-- Social Media Button -->
+        <li class="flex items-center">
+          <a class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+            href="#pablo">
+            <!-- Icon -->
+            <i class="lg:text-gray-300 text-gray-500 fab fa-twitter text-lg leading-lg "></i>
+            <span class="lg:hidden inline-block ml-2">Tweet</span>
+          </a>
+        </li>
+        <!-- Social Media Button -->
+        <li class="flex items-center">
+          <a class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+            href="#pablo">
+            <!-- Icon -->
+            <i class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg "></i>
+            <span class="lg:hidden inline-block ml-2">Star</span>
+          </a>
+        </li>
+        <!-- Button -->
+        <!-- <li class="flex items-center">
+          <button
+            class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
+            type="button"
+            style="transition: all 0.15s ease 0s;">
+            Icon
+            <i class="fas fa-arrow-alt-circle-down"></i>
+            Download
+          </button>
+        </li> -->
+      </ul>
     </div>
-  </nav>
-  <!-- End of Navigation -->
+  </div>
+</nav>
+<!-- End of Navigation -->
 
   <!-- Splash Page -->
   <main>
@@ -743,22 +769,6 @@
   </footer>
   <!-- End of Footer Section -->
 </body>
-<!-- AOS -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js" ></script>
-<script>
-  AOS.init({
-  delay: 200, // values from 0 to 3000, with step 50ms
-  duration: 1500, // values from 0 to 3000, with step 50ms
-  once: false, // whether animation should happen only once - while scrolling down
-  mirror: false, // whether elements should animate out while scrolling past them
-  });
-</script>
 
-<!-- Navigation Script -->
-<script>
-  function toggleNavbar(collapseID) {
-    document.getElementById(collapseID).classList.toggle("hidden");
-    document.getElementById(collapseID).classList.toggle("block");
-  }
-</script>
+
 </html>
